--- a/portal/templates/staff_by_org.html
+++ b/portal/templates/staff_by_org.html
@@ -63,9 +63,6 @@
 <script src="{{ url_for('static', filename='js/bootstrap.rowlink.js') }}" async></script>
 {% endblock %}
 {% block document_ready %}
-var d = new Date();
-var filename= 'StaffList_'+("00" + d.getDate()).slice(-2)+("00" + (d.getMonth() + 1)).slice(-2)+d.getFullYear()+("00" + d.getHours()).slice(-2)+ ("00" + d.getMinutes()).slice(-2)+ ("00" + d.getSeconds()).slice(-2);
-
 $("#adminTable").bootstrapTable({
     formatShowingRows: function (pageFrom, pageTo, totalRows) {
         var rowInfo = "Showing "+pageFrom+" to "+pageTo+" of "+totalRows+" users";
@@ -73,7 +70,7 @@ $("#adminTable").bootstrapTable({
         return rowInfo;
     },
     exportOptions: {
-        fileName: filename,
+        fileName: __getExportFileName("StaffList__")
     }
 });
 
