--- a/portal/templates/patients_by_org.html
+++ b/portal/templates/patients_by_org.html
@@ -108,12 +108,22 @@
 {% block document_ready %}
 
 var AT = new AdminTool({{user.id}});
-
-var d = new Date();
-var filename= 'PatientList_'+("00" + d.getDate()).slice(-2)+("00" + (d.getMonth() + 1)).slice(-2)+d.getFullYear()+("00" + d.getHours()).slice(-2)+ ("00" + d.getMinutes()).slice(-2)+ ("00" + d.getSeconds()).slice(-2);
+/*
+* initializing bootstrapTable
+*/
+$(".tnth-admin-table").bootstrapTable({
+  formatShowingRows: function (pageFrom, pageTo, totalRows) {
+      var thisId = $(this).attr("tableId");
+      var rowInfo = "Showing "+pageFrom+" to "+pageTo+" of "+totalRows+" users";
+      $("#tableCount"+thisId).html(rowInfo);
+      return rowInfo;
+  },
+  exportOptions: {
+      fileName: __getExportFileName("PatientList__")
+  }
+});
 
 $(document).ready(function() {
-
   /*
    *  scroll to the top of page on each page change
    */
@@ -155,7 +165,6 @@ $(document).ready(function() {
    * end commented out code
    */
 
-
   /*
    * add placeholder text for filter controls
    */
@@ -174,21 +183,6 @@ $(document).ready(function() {
    * fade loading spinner on page load
    */
   AT.fadeLoader();
-
-  /*
-   * initializing bootstrapTable
-   */
-  $(".tnth-admin-table").bootstrapTable({
-    formatShowingRows: function (pageFrom, pageTo, totalRows) {
-        var thisId = $(this).attr("tableId");
-        var rowInfo = "Showing "+pageFrom+" to "+pageTo+" of "+totalRows+" users";
-        $("#tableCount"+thisId).html(rowInfo);
-        return rowInfo;
-    },
-    exportOptions: {
-        fileName: filename,
-    }
-  });
 
   /*
    *  hide checkbox for hidden id field from side menu
