one underscore instead of two

--- a/portal/templates/patients_by_org.html
+++ b/portal/templates/patients_by_org.html
@@ -119,7 +119,7 @@ $(".tnth-admin-table").bootstrapTable({
       return rowInfo;
   },
   exportOptions: {
-      fileName: __getExportFileName("PatientList__")
+      fileName: __getExportFileName("PatientList_")
   }
 });
 
