--- a/portal/templates/staff_by_org.html
+++ b/portal/templates/staff_by_org.html
@@ -70,7 +70,7 @@ $("#adminTable").bootstrapTable({
         return rowInfo;
     },
     exportOptions: {
-        fileName: __getExportFileName("StaffList__")
+        fileName: __getExportFileName("StaffList_")
     }
 });
 
