minify portal wrapper css

--- a/portal/static/css/topnav.css
+++ b/portal/static/css/topnav.css
@@ -1,413 +1,2 @@
-/* TrueNTH Nav styles
- * For use with portal_wrapper
- * Namespaced to avoid conflicts. Some styles based on Bootstrap
- */
-/** Overall wrapper with defaults **/
-#tnthNavWrapper {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 14px;
-  line-height: 1.42857143;
-  color: #333;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-#tnthNavWrapper a {
-  text-decoration: none;
-}
-#tnthNavWrapper img {
-  margin: 0 1em;
-  vertical-align: middle;
-}
-#tnthNavWrapper * {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-#tnthNavWrapper :after,
-#tnthNavWrapper :before {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-.watermark, .watermark-nowrapper {
-  position: absolute;
-  top: 0;
-  right: 0;
-  color: #603b00;
-  z-index: 1000;
-  font-weight: normal;
-  font-size: 0.85em;
-  text-align: center;
-  width: 100%;
-  background-color: #eeab50;
-  letter-spacing: 1px;
-  text-transform: capitalize;
-}
-.tnth-white {
-  color: #ECF7E5;
-  background-color: transparent;
-  border-color: transparent;
-  /*transition: all 0.2s ease-in-out 0s;
-  -webkit-transition: all 0.2s ease-in-out 0s;*/
-  text-shadow: none;
-  background-image: none;
-}
-.tnth-white:hover,
-.tnth-white:active,
-.tnth-open .tnth-white {
-  background-color: #fff;
-  color: #333;
-}
-.tnth-white:visited {
-  color: #ECF7E5;
-  background-color: transparent;
-}
-#tnthNavMain {
-  width: 100%;
-  max-width: 100%;
-  background-color: #1A1919;
-  background-image: url('../img/header_background.jpg');
-  height: 135px;
-  background-size: cover;
-  margin: 0;
-  padding: 30px;
-}
-#tnthNavMainContainer {
-  max-width: 720px;
-  position: relative;
-  margin: 0 auto;
-}
-#tnthNavXs {
-  display: none;
-  margin: 0;
-  width: 100%;
-  max-width: 100%;
-  background-color: #171c20;
-  background-image: url('../img/header_background.jpg');
-  background-size: cover;
-  background-repeat: no-repeat;
-  padding: 10px 15px;
-  z-index: 1000;
-  border: none;
-  position: relative;
-  min-height: 50px;
-  overflow: hidden;
-}
-#tnthNavXs:after {
-  clear: both;
-  display: table;
-  content: " ";
-}
-#tnthNavXs .tnth-navbar-toggle {
-  margin: 0;
-  padding: 2px 2px 2px 20px;
-  position: relative;
-  float: left;
-  background-repeat: no-repeat;
-  background-position: 4px 16px;
-  background-image: url('../img/fa_bars_ffffff.png');
-  background-size: auto 13px;
-  border: 1px solid transparent;
-  border-radius: 4px;
-}
-#tnthNavXs .tnth-navbar-toggle img {
-  margin-left: 8px;
-}
-#tnthNavXs .tnth-navbar-toggle.tnth-navbar-no-profile img {
-  visibility: hidden;
-  width: 1px;
-  margin-left: 0;
-}
-#tnthNavXs .tnth-navbar-toggle:hover,
-#tnthNavXs .tnth-navbar-toggle:active {
-  cursor: pointer;
-  background-image: url('../img/fa_bars_333333.png');
-  background-color: #fff;
-}
-/** Logo **/
-#tnthLogo {
-  width: 500px;
-  margin: 0 auto;
-  transition: margin 10ms ease-in;
-  text-align: center;
-}
-#tnthLogo img {
-  height: 75px;
-}
-#tnthLogoXs {
-  padding: 0;
-}
-#tnthLogoXs img {
-  height: 40px;
-}
-#tnthTopLinks {
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-/** Buttons **/
-.tnth-btn-group {
-  position: relative;
-  display: inline-block;
-  vertical-align: middle;
-}
-.tnth-nav-btn {
-  display: inline-block;
-  height: inherit;
-  line-height: inherit;
-  text-align: center;
-  white-space: nowrap;
-  vertical-align: middle;
-  margin-left: 0.2em;
-  cursor: pointer;
-  background-image: none;
-  border: 1px solid transparent;
-  border-radius: 4px;
-  background-color: transparent;
-  padding: 0;
-}
-.tnth-nav-btn:hover,
-.tnth-nav-btn:focus,
-.tnth-nav-btn:active {
-  background-color: #fff;
-}
-#tnthUserBtn {
-  padding: 0 14px 0 0;
-  height: inherit;
-}
-#tnthHomeBtn {
-  background-image: url('../img/fa_home_ffffff.png');
-  width: 38px;
-  height: 52px;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-#tnthHomeBtn:hover,
-#tnthHomeBtn:focus,
-#tnthHomeBtn:active {
-  background-image: url('../img/fa_home_333333.png');
-}
-/** Dropdown styles - based on Bootstrap dropdown **/
-.tnth-dropdown {
-  position: relative;
-}
-.tnth-dropdown-toggle:focus {
-  outline: 0;
-}
-.tnth-dropdown-menu {
-  position: absolute;
-  top: 100%;
-  left: 0;
-  z-index: 1000;
-  display: none;
-  float: left;
-  min-width: 160px;
-  padding: 7px 0;
-  margin: 2px 0 0;
-  font-size: 14px;
-  text-align: left;
-  list-style: none;
-  background-color: #fff;
-  -webkit-background-clip: padding-box;
-  background-clip: padding-box;
-  border: 1px solid #ccc;
-  border: 1px solid rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
-  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
-  list-style-position: inside;
-}
-.tnth-dropdown-menu.pull-right {
-  right: 0;
-  left: auto;
-}
-.tnth-dropdown-menu.divider {
-  height: 1px;
-  margin: 9px 0;
-  overflow: hidden;
-  background-color: #e5e5e5;
-}
-.tnth-dropdown-menu > li > a {
-  display: block;
-  padding: 3px 20px;
-  clear: both;
-  font-weight: normal;
-  line-height: 1.42857143;
-  color: #333;
-  white-space: nowrap;
-}
-.tnth-dropdown-menu > li > a:hover,
-.tnth-dropdown-menu > li > a:focus {
-  text-decoration: none;
-  color: #262626;
-  background-color: #f5f5f5;
-}
-.tnth-dropdown-menu > .active > a,
-.tnth-dropdown-menu > .active > a:hover,
-.tnth-dropdown-menu > .active > a:focus {
-  color: #fff;
-  text-decoration: none;
-  background-color: #337ab7;
-  outline: 0;
-}
-.tnth-dropdown-menu > .tnth-disabled > a,
-.tnth-dropdown-menu > .tnth-disabled > a:hover,
-.tnth-dropdown-menu > .tnth-disabled > a:focus {
-  color: #777;
-}
-.tnth-dropdown-menu > .tnth-disabled > a:hover,
-.tnth-dropdown-menu > .tnth-disabled > a:focus {
-  text-decoration: none;
-  background-color: transparent;
-  background-image: none;
-  cursor: not-allowed;
-}
-.tnth-open > .tnth-dropdown-menu {
-  display: block;
-}
-.tnth-open > a {
-  outline: 0;
-}
-.welcome-text {
-  display: block;
-  margin: 0.2em 0;
-}
-@media screen\0 {
-  /* IE9+ */
-  .tnth-dropdown-menu li {
-    list-style-image: url(data:0);
-    list-style-position: outside;
-    overflow: hidden;
-  }
-}
-@media all and (-ms-high-contrast: none),(-ms-high-contrast: active) {
-  /* IE10+ */
-  .tnth-dropdown-menu li {
-    list-style-image: url(data:0);
-    list-style-position: outside;
-    overflow: hidden;
-  }
-}
-/*** Styles for responsive xs size ***/
-.tnth-container-fluid {
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto;
-}
-.tnth-container-fluid .tnth-navbar-header {
-  margin-right: -15px;
-  margin-left: -15px;
-}
-.tnth-container-fluid .tnth-navbar-header:after,
-.tnth-container-fluid .tnth-navbar-header:before {
-  display: table;
-  content: " ";
-}
-.tnth-container-fluid .tnth-navbar-header:after {
-  clear: both;
-}
-/** Navbar for XS size **/
-#tnthNavbarXs {
-  padding-top: 20px;
-  display: none;
-}
-.tnth-navbar-xs {
-  margin: 7.5px -15px;
-  padding-left: 0;
-  list-style: none;
-}
-.tnth-navbar-xs > li {
-  position: relative;
-  display: block;
-}
-.tnth-navbar-xs > li > a {
-  line-height: 20px;
-  position: relative;
-  display: block;
-  padding: 10px 15px;
-  color: #fff;
-}
-.tnth-navbar-xs > li > a:hover {
-  background-color: #fff;
-  color: #333;
-}
-.tnth-navbarXs-img-container {
-  text-align: center;
-  width: 160px;
-  margin: 0 auto;
-}
-/** Responsive sizes **/
-@media (max-width: 498px) {
-  #tnthLogoXs img {
-    margin-right: 2em !important;
-  }
-  .tnth-navbarXs-img-container img {
-    width: 25% !important;
-  } 
-}
-@media (max-width: 640px) {
-  .watermark {
-    width: 30% !important;
-    max-width: 100% !important;
-    font-size: 0.5em !important;
-  }
-  .tnth-navbarXs-img-container img {
-    margin: 0 !important;
-    width: 40% !important;
-  }
-  .profile-img {
-    display: none;
-  }
-}
-@media (max-width: 991px) {
-  #tnthUserBtn {
-    padding: 6px 0px;
-    height: inherit;
-  }
-  #tnthNavMain {
-    display: none !important;
-  }
-  #tnthNavXs {
-    display: block;
-  }
-  #tnthLogoXs img {
-    margin-right: 45%;
-  }
-  .watermark {
-    width: 270px;
-    padding: 1em;
-    font-size: 0.7em;
-    background-color: transparent;
-    color: #FFF;
-  }
-  .watermark-nowrapper {
-    font-size: 0.7em;
-  }
-  .tnth-navbarXs-img-container img {
-    width: 65%;
-  } 
-}
-@media(min-width: 499px) {
-  #tnthLogoXs img {
-    float: right;
-  }
-}
-@media (min-width: 992px) {
-  #tnthNavMainContainer {
-    max-width: 940px;
-  }
-  #tnthNavWrapper img {
-    margin: 0 0.5em;
-    vertical-align: middle;
-  }
-}
-@media (min-width: 1220px) {
-  #tnthNavMainContainer {
-    max-width: none;
-  }
-  .welcome-text {
-    display: inline-block;
-  }
-}
+.tnth-dropdown-toggle:focus,.tnth-open>a{outline:0}#tnthNavWrapper{font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;font-size:14px;line-height:1.42857143;color:#333;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}#tnthNavWrapper a{text-decoration:none}#tnthNavWrapper img{margin:0 1em;vertical-align:middle}#tnthNavWrapper *,#tnthNavWrapper :after,#tnthNavWrapper :before{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}.watermark,.watermark-nowrapper{position:absolute;top:0;right:0;color:#603b00;z-index:1000;font-weight:400;font-size:.85em;text-align:center;width:100%;background-color:#eeab50;letter-spacing:1px;text-transform:capitalize}.tnth-white{color:#ECF7E5;background-color:transparent;border-color:transparent;text-shadow:none;background-image:none}#tnthNavMain,#tnthNavXs{width:100%;background-image:url(../img/header_background.jpg);max-width:100%}.tnth-open .tnth-white,.tnth-white:active,.tnth-white:hover{background-color:#fff;color:#333}.tnth-white:visited{color:#ECF7E5;background-color:transparent}#tnthNavMain{background-color:#1A1919;height:135px;background-size:cover;margin:0;padding:30px}#tnthNavMainContainer{max-width:720px;position:relative;margin:0 auto}#tnthNavXs,#tnthNavXs .tnth-navbar-toggle{margin:0;position:relative;background-repeat:no-repeat}#tnthNavXs{display:none;background-color:#171c20;background-size:auto 81px;padding:10px 15px;z-index:1000;border:none;min-height:50px;overflow:hidden}#tnthNavXs:after{clear:both;display:table;content:" "}#tnthNavXs .tnth-navbar-toggle{padding:2px 2px 2px 20px;float:left;background-position:4px 16px;background-image:url(../img/fa_bars_ffffff.png);background-size:auto 13px;border:1px solid transparent;border-radius:4px}#tnthLogoXs,.tnth-nav-btn{display:inline-block;padding:0}#tnthNavXs .tnth-navbar-toggle img{margin-left:8px}#tnthNavXs .tnth-navbar-toggle.tnth-navbar-no-profile img{visibility:hidden;width:1px;margin-left:0}#tnthNavXs .tnth-navbar-toggle:active,#tnthNavXs .tnth-navbar-toggle:hover{cursor:pointer;background-image:url(../img/fa_bars_333333.png);background-color:#fff}#tnthLogo{width:500px;margin:0 auto;transition:margin 10ms ease-in;text-align:center}#tnthLogo img{height:75px}#tnthLogoXs{margin:auto;max-width:100%}#tnthLogoXs img{height:40px;float:right}@media (min-width:699px){#tnthLogoXs{width:250px}}#tnthTopLinks{position:absolute;top:0;left:0}.tnth-btn-group,.tnth-dropdown{position:relative}.tnth-btn-group{display:inline-block;vertical-align:middle;margin-left:.2em}.tnth-nav-btn{height:inherit;line-height:inherit;text-align:center;white-space:nowrap;vertical-align:middle;cursor:pointer;background-image:none;border:1px solid transparent;border-radius:4px;background-color:transparent}.tnth-dropdown-menu,.tnth-nav-btn:active,.tnth-nav-btn:focus,.tnth-nav-btn:hover{background-color:#fff}#tnthUserBtn{padding:0 14px 0 0;height:inherit}#tnthHomeBtn{background-image:url(../img/fa_home_ffffff.png);width:38px;height:52px;background-repeat:no-repeat;background-position:center}#tnthHomeBtn:active,#tnthHomeBtn:focus,#tnthHomeBtn:hover{background-image:url(../img/fa_home_333333.png)}.tnth-dropdown-menu{position:absolute;top:100%;left:0;z-index:1000;display:none;float:left;min-width:160px;padding:7px 0;margin:2px 0 0;font-size:14px;text-align:left;list-style:none inside;-webkit-background-clip:padding-box;background-clip:padding-box;border:1px solid #ccc;border:1px solid rgba(0,0,0,.15);border-radius:4px;-webkit-box-shadow:0 6px 12px rgba(0,0,0,.175);box-shadow:0 6px 12px rgba(0,0,0,.175)}.tnth-open>.tnth-dropdown-menu,.welcome-text{display:block}.tnth-dropdown-menu.pull-right{right:0;left:auto}.tnth-dropdown-menu.divider{height:1px;margin:9px 0;overflow:hidden;background-color:#e5e5e5}.tnth-dropdown-menu>li>a{display:block;padding:3px 20px;clear:both;font-weight:400;line-height:1.42857143;color:#333;white-space:nowrap}.tnth-dropdown-menu>li>a:focus,.tnth-dropdown-menu>li>a:hover{text-decoration:none;color:#262626;background-color:#f5f5f5}.tnth-dropdown-menu>.active>a,.tnth-dropdown-menu>.active>a:focus,.tnth-dropdown-menu>.active>a:hover{color:#fff;text-decoration:none;background-color:#337ab7;outline:0}.tnth-dropdown-menu>.tnth-disabled>a,.tnth-dropdown-menu>.tnth-disabled>a:focus,.tnth-dropdown-menu>.tnth-disabled>a:hover{color:#777}.tnth-dropdown-menu>.tnth-disabled>a:focus,.tnth-dropdown-menu>.tnth-disabled>a:hover{text-decoration:none;background-color:transparent;background-image:none;cursor:not-allowed}.welcome-text{margin:.2em 0}@media screen{.tnth-dropdown-menu li{list-style-image:url(data:0);list-style-position:outside;overflow:hidden}}@media all and (-ms-high-contrast:none),(-ms-high-contrast:active){.tnth-dropdown-menu li{list-style-image:url(data:0);list-style-position:outside;overflow:hidden}}.tnth-container-fluid{padding-right:15px;padding-left:15px;margin-right:auto;margin-left:auto}.tnth-container-fluid .tnth-navbar-header{margin-right:-15px;margin-left:-15px}.tnth-container-fluid .tnth-navbar-header:after,.tnth-container-fluid .tnth-navbar-header:before{display:table;content:" "}.tnth-container-fluid .tnth-navbar-header:after{clear:both}#tnthNavbarXs{padding-top:20px;display:none}.tnth-navbar-xs>li,.tnth-navbar-xs>li>a{position:relative;display:block}.tnth-navbar-xs{margin:7.5px -15px;padding-left:0;list-style:none}.tnth-navbar-xs>li>a{line-height:20px;padding:10px 15px;color:#fff}.tnth-navbar-xs>li>a:hover{background-color:#fff;color:#333}.tnth-navbarXs-img-container{text-align:center;width:160px;margin:0 auto}@media (max-width:498px){#tnthLogoXs{display:inline-block;margin:auto}.tnth-navbarXs-img-container img{width:25%!important}}@media (max-width:640px){.watermark{width:50%!important;max-width:100%!important;font-size:.5em!important;top:9%}.tnth-navbarXs-img-container img{margin:0!important;width:40%!important}.profile-img{display:none}}@media (max-width:550px){.watermark{top:12%}}@media (max-width:991px){.watermark,.watermark-nowrapper{font-size:.7em}#tnthUserBtn{padding:6px 0;height:inherit}#tnthNavMain{display:none!important}#tnthNavXs{display:block}.watermark{width:270px;padding:1em;background-color:transparent;color:#FFF}.tnth-navbarXs-img-container img{width:65%}}@media (min-width:499px){#tnthLogoXs img{float:right}}@media (min-width:992px){#tnthNavMainContainer{max-width:940px}#tnthNavWrapper img{margin:0 .5em;vertical-align:middle}}@media (min-width:1220px){#tnthNavMainContainer{max-width:none}.welcome-text{display:inline-block}}
+/*# sourceMappingURL=../maps/topnav.css.map */
