move rep stats to sep module, add refresh task, fix template issues

--- a/portal/templates/reporting_dashboard.html
+++ b/portal/templates/reporting_dashboard.html
@@ -23,24 +23,29 @@
             </thead>
             <tbody data-link="row" class="rowlink">
             <tr>
+                <td>Date</td>
+                <td>{{ now.day }}</td>
+                <td>{{ now.month }}</td>
+                <td>{{ now.year }}</td>
+            <tr>
                 <td>{{ _("Registrations") }}</td>
-                <td>{{ counts['registrations'] | selectattr("day", "equalto", now.day) | list | length }}</td>
-                <td>{{ counts['registrations'] | selectattr("month", "equalto", now.month) | list | length }}</td>
+                <td>{{ counts['registrations'] | selectattr("day", "equalto", now.day) | selectattr("month", "equalto", now.month) | selectattr("year", "equalto", now.year) | list | length }}</td>
+                <td>{{ counts['registrations'] | selectattr("month", "equalto", now.month) | selectattr("year", "equalto", now.year) | list | length }}</td>
                 <td>{{ counts['registrations'] | selectattr("year", "equalto", now.year) | list | length }}</td>
                 <td>{{ counts['registrations'] | length }}</td>
             </tr>
             <tr>
                 <td>{{ _("Logins") }}</td>
-                <td>{{ counts['encounters']['all'] | selectattr("day", "equalto", now.day) | list | length }}</td>
-                <td>{{ counts['encounters']['all'] | selectattr("month", "equalto", now.month) | list | length }}</td>
+                <td>{{ counts['encounters']['all'] | selectattr("day", "equalto", now.day) | selectattr("month", "equalto", now.month) | selectattr("year", "equalto", now.year) | list | length }}</td>
+                <td>{{ counts['encounters']['all'] | selectattr("month", "equalto", now.month) | selectattr("year", "equalto", now.year) | list | length }}</td>
                 <td>{{ counts['encounters']['all'] | selectattr("year", "equalto", now.year) | list | length }}</td>
                 <td>{{ counts['encounters']['all'] | length }}</td>
             </tr>
             {% for k,v in counts['encounters'].items() %}
             {% if k and k != 'all' %}
                 <td><div class="indent">{{ k }}</div></td>
-                <td>{{ v | selectattr("day", "equalto", now.day) | list | length }}</td>
-                <td>{{ v | selectattr("month", "equalto", now.month) | list | length }}</td>
+                <td>{{ v | selectattr("day", "equalto", now.day) | selectattr("month", "equalto", now.month) | selectattr("year", "equalto", now.year) | list | length }}</td>
+                <td>{{ v | selectattr("month", "equalto", now.month) | selectattr("year", "equalto", now.year) | list | length }}</td>
                 <td>{{ v | selectattr("year", "equalto", now.year) | list | length }}</td>
                 <td>{{ v | length }}</td>
             </tr>
