--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -1739,13 +1739,16 @@ div.noOrg-container {
     top:-1px
   }
   #phoneGroup {
-    margin-top: 1.2em;
+    margin-top: 1em;
   }
   #altPhoneGroup {
-    margin-top: 1.8em;
+    margin-top: 1.3em;
   }
   #updateProfile {
     font-size: @smallBtnSize;
+  }
+  label.clinics-section-label {
+    margin-bottom: 0;
   }
 }
 .create-account-container {
@@ -1756,7 +1759,7 @@ div.noOrg-container {
   background-image: linear-gradient(to top, #e8e8e8 0%, #f5f5f5 100%);
 }
 #createProfileForm[data-account='patient'] #bdGroup {
-  min-height: 116px;
+  min-height: 112px;
 }
 
 #profileSendEmailContainer {
@@ -2756,6 +2759,11 @@ div.timezone-warning.text-warning {
   }
   #profileForm .communications-container .flex-item {
     flex: 0.3 350px;
+  }
+  #createProfileForm {
+    #emailGroup {
+      margin-top: 1em;
+    }
   }
 }
 @media (min-width: 1200px) {
